[metadata]
name = qcdevol
version = 4.0
author = G. Peter Lepage
author_email = gpl3@cornell.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/gplepage/qcdevol
description = Implements evolution of QCD coupling and operators
long_description = file: README.rst

[options]
zip_safe = False
packages =
    qcdevol
package_dir = 
    = src
python_requires = >=3.5
install_requires = 
    numpy 
    gvar
