[metadata]
name = qcdevol
version = 4.0
author = G. Peter Lepage
author_email = g.p.lepage@cornell.edu
license = GPLv3
license_file = LICENSE.txt
url = https://github.com/gplepage/qcdevol
description = Evolution of QCD couplings, masses and other renormalization parameters.
long_description = file: README.rst

[options]
zip_safe = False
packages =
    qcdevol
package_dir = 
    = src
python_requires = >=3.6
install_requires = 
    numpy 
    gvar
    importlib-metadata; python_version<'3.8'
include_package_data = False
